# ChangeLog for sys-cluster/ceph
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ceph/ChangeLog,v 1.39 2013/05/09 21:07:35 alexxy Exp $

*ceph-0.56.5 (09 May 2013)

  09 May 2013; Alexey Shvetsov <alexxy@gentoo.org> +ceph-0.56.5.ebuild:
  Version bump

*ceph-0.61.1 (09 May 2013)

  09 May 2013; Alexey Shvetsov <alexxy@gentoo.org> +ceph-0.61.1.ebuild,
  -ceph-0.60-r1.ebuild, -files/ceph-0.60-mds_sessionmap.patch:
  Version bump & clean up

*ceph-0.60-r1 (12 Apr 2013)

  12 Apr 2013; Alexey Shvetsov <alexxy@gentoo.org> +ceph-0.60-r1.ebuild,
  +files/ceph-0.60-mds_sessionmap.patch, -ceph-0.58.ebuild, -ceph-0.59.ebuild,
  -ceph-0.60.ebuild, ceph-9999.ebuild:
  Add patch to fix mds crash, also fix deps #465120

  04 Apr 2013; Alexey Shvetsov <alexxy@gentoo.org> ceph-0.60.ebuild,
  ceph-9999.ebuild:
  Drop unneded line

*ceph-0.60 (03 Apr 2013)

  03 Apr 2013; Alexey Shvetsov <alexxy@gentoo.org> +ceph-0.60.ebuild:
  Version bump

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> -ceph-0.49.ebuild:
  Remove old

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ceph-0.56.3.ebuild:
  Stable for x86, wrt bug #463306

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ceph-0.56.3.ebuild:
  Stable for amd64, wrt bug #463306

  26 Mar 2013; Patrick Lauer <patrick@gentoo.org> ceph-0.59.ebuild:
  Unbundling leveldb #463314

*ceph-0.59 (26 Mar 2013)
*ceph-0.56.4 (26 Mar 2013)

  26 Mar 2013; Alexey Shvetsov <alexxy@gentoo.org> +ceph-0.56.4.ebuild,
  +ceph-0.59.ebuild:
  Version bump

*ceph-0.56.3 (11 Mar 2013)
*ceph-0.58 (11 Mar 2013)

  11 Mar 2013; Alexey Shvetsov <alexxy@gentoo.org> +ceph-0.56.3.ebuild,
  +ceph-0.58.ebuild, -ceph-0.51.ebuild, -ceph-0.55.1.ebuild,
  -ceph-0.56.1.ebuild, -files/ceph-0.26-autotools.patch,
  -files/ceph-issue1869.patch, ceph-9999.ebuild, files/ceph.initd:
  Version bump. Also fix bugs #455582 #455584 #452842

*ceph-9999 (14 Jan 2013)
*ceph-0.56.1 (14 Jan 2013)
