@@ -7,27 +7,31 @@ DIST ceph-0.56.3.tar.bz2 3214620 SHA256 5ea39c9fce4741e0a4adb04262fa02d491834996
 DIST ceph-0.56.4.tar.bz2 3286520 SHA256 985b110f8f11e9eb1ad360c309015400b15ecee5065591c00c6e3a88d1859d2a SHA512 3c2760e72e097e3aa44a8e1e075cf12591b2d9b9b9d0d520cd3776ef106785f3c9085c34d4ea71ff20570de3d05f1fc968e6f2a69492ba0f2e8d2c2000096136 WHIRLPOOL 7115aeac01f4b70f888e2c4cee708237f536437d78ba88d333579addc148f4a3de3dc8066ddfca60b41f8b716245be50df819451555f73291adb1117f1d806f6
 DIST ceph-0.56.5.tar.bz2 3292416 SHA256 4fe49885d2d013747098fb748855d7ab0844f9e25b204a6ad9f5d49954cfb4be SHA512 beeb6bf5a26eed34b742289ce88788f4f70ee6498d3e801431f0dedbd870c3d417ad20059a4699bc56645114271f67b54dfbf1dedd29306c8cbc2851ef352c7c WHIRLPOOL 9d08263e5f33fb3bd0ad6ac9dca01ccbfa3eab94bcd0bbf4be1734140419917178d0aebdc5ce528e5a1f1f7b743be0006113cb227882af095c5c737c017e95c3
 DIST ceph-0.61.1.tar.bz2 3150098 SHA256 784c30692dc9705b160d69797dd8183786ec26725b13a09f91ba0095ae1b0f26 SHA512 8de8d4602185623f161c1c219d2127c0caaa7a2ac202cd5e105fe4eac889261acfa17afb9ffef6bd4f28185f9945c7f05d85d4c746879ebdfabfd0e9553d8a7f WHIRLPOOL 9b2fbcec6ccb29cd04e4d08ec8a7c53e2f45d9473751b82d46f809dcb9b34f08c23ea381697b87406581265688b4149c5e0e44e4635f2f4106b07cdda06b4bc7
+DIST ceph-0.61.7.tar.bz2 3151436 SHA256 29e095cf967e4e0e425adbd31cd036cae9815c9ea70384f52b28361c2f453daa SHA512 7d59e96f7284caef05f43aef7507bb898546f8329b65f8eddae15e0c34829c4f5eb9b2959ac38864539d379213b6681839065dff8b7e72a1efc7ef3a959c6672 WHIRLPOOL 4e4d192e8f3c09b86e847975673b5c4b43a5ff9c393b6f554f83c1c33f4cf92516cadb941e141fc733b185c39ad64be0586472744abf8784c651b50f8b8df727
+DIST ceph-0.67.tar.bz2 3305744 SHA256 0e568d591fcfc290fe015cc6cb819af0ad75358715c2835cdebce1ce145b8817 SHA512 f9235ae0a7ba6b95474e858dc8577fd81ff530044cff6488ccb84496806db754e1a49edeb3acb020c0cba7869aa5e9a91f9c8813866fde19c63075d233dbc2ca WHIRLPOOL d73103c14e47b39745c1538caca4e79e0dc97325ddbfe31a53d60c0f5cdcd333604b162c0f2b64ed70a76b588c76cb49ed9d1b7be6d3ab04b7ae17ba1d02b4f3
 EBUILD ceph-0.56.3.ebuild 2381 SHA256 94920bc6603dbec975b98985d42287fd6405ab112b26c8c8ca039df46ee8311c SHA512 021a42525996b60f87bc3c5a93c50c97c979fe76884e1769e9c2fbf7670dbd862599f26c801b60663894d6035ef1cb4ce2725dcaf655d19e78b650a119158cd2 WHIRLPOOL fe629a7295e2573f2aa888650f7b9fe120c37a8f9ac80accc26b80e7b0c2727d61442f4233ed0759af3bb98496cc4abe3b185bd654b7702636d49d4b3e4e247d
 EBUILD ceph-0.56.4.ebuild 2386 SHA256 a780b9692d4b36d3f4c49262761170f5e4bd2bd9e3a20f3a853f864d34560c82 SHA512 203544e17b6241099f21ab0c9b96dbf0d3c651f36f1f4e4321c2ef417ebb229eddaa7c1d50fadc498fb60516e66e310e182eada65512d6310fec8656c29be763 WHIRLPOOL 6b81c9a404a39ab2e8145a1348b7907f2a6e67f3d91686d67081d4cdb99c784334e3e948224cdaf18c92d933635fbbb1357601a21b03823ac766237f60590a96
 EBUILD ceph-0.56.5.ebuild 2386 SHA256 b15d09939ff77a42b1b5b3a21196af89e1cb6f532955327c3c027def0bb28485 SHA512 0135e1294f506c84ec85e8843180d541f719699aa4c5d7a0804e4300dde948abcdf0107783fc7afc9abb0b2a1f55660384904384767061d06df349a0b1bec613 WHIRLPOOL 713877691bf0b45403e00e888565463d8c0b6a7e31257b2744f218187187032c5bbfe6727ddd4fd5d1feb67158580e273e30ae8b6be8f75d2162837702b22b2e
 EBUILD ceph-0.61.1.ebuild 2433 SHA256 4b115a71581ddecdb1fe83e569e64b9af0fc1e7925a3805ff90a3caacdb0b08e SHA512 8b6b6df78cc9d99d04fc011e28a8981dc111c7901a1ab4b3d1c1bdfb92c69305b8fea3ea19e814bc685ac013b723be632104d61fc2f9f302fa1aebd9ea38d0a7 WHIRLPOOL 9e576ac87af6374cae4403789d1f1720e96495e37bd26fbcc9c9d384d6eb7004874aff39c0c1f264cfccca990322d31fc39d56de443277e986416e11366d4097
+EBUILD ceph-0.61.7.ebuild 2433 SHA256 7c37d394dda565f3f34d09734e5dc8bccb7d42e3070c4a2b49a31e1517f1b4b5 SHA512 4e8026d0267eb71d7cdf9d4ac6156aa418a8dd4f141242ad4a019c482c2d9bae630eda65a807550a8c5c28c15e7c43dd3688fc4e0f7fd5b588e1b9da87d85808 WHIRLPOOL 542e893c8a36db826ea595acf61c6b0cc6e12131c3e048679e2d1ee2670e29be54c410681c066c8c4def7eedb3be4a55dcee31917caa56d2be9c0863bdf706cc
+EBUILD ceph-0.67.ebuild 2431 SHA256 48f722b17ee19722b346d90028215d3e02b20448d0fe9ee7e406b94fb6963915 SHA512 9b4aa65546882f28213ef53cc2cf0848031605ffc62cfd06ac0677fc3ed787ced523c7044f7f105a8095b374a4efa003ce15423ac0e9ad9b7b3e08121970a64c WHIRLPOOL 1f822851fae31800c85e73ba5985004a347285a83b9bc0c4eaef449013f0ac2cc39140c40ad52d6c27a962ee6d88b281e0d072334aba6e6d1fdd0673f8d4aea4
 EBUILD ceph-9999.ebuild 2431 SHA256 838ae7c201f62b06b1bc4ce84cddc7284b14841e8ffa00d926c2c754bddaff62 SHA512 fc180a1cd63eb977982b683021bde8f263a912087ace01139e02c65158ec109530813d9911965d874d84d94864f1812045d160642710b84654e3df7b4169f111 WHIRLPOOL 8457e692ba829923d91f7691ada3130ac78b34cb4b888d50a781098ef9d7336e0e02c4c4d532ce7298b755945d675c031bf8f323f019eff86a5ce6c6debb8dbb
-MISC ChangeLog 6564 SHA256 7f2c093d4981d1dbc2ea4215454f4700b0694a0b0243463e86175ad8130939b7 SHA512 7517d873aa8ca45742784d6b3000d6a2f92b699f159c879e7e26821c481faa68011849a7fc53c9f46250561765e08ef9dfbe0a76df1c9eaf2404161709539c2c WHIRLPOOL 8f9d16ec04d6aad983a56daa24979af1ade7c080fdd3d4a87680ccbb65bd645b7dd9aebdb89a25cf5ec5c74873ef99ad64a25aa30010dc490e57fcd195933669
+MISC ChangeLog 6742 SHA256 aa971ef0e83cc78e35151bca6bc199559384dea7d555f258f5c0be3137cc2fae SHA512 1ca49159f71e9eb3d7e4cbaef128bacc342a30eb94d853f05965370960d647be5d6bc8d6bf309e5d4a319dc7f2d22f1fa85a9c8808eb0d9f0ba126034eee1bb4 WHIRLPOOL 73253894a9a2bc43f14eb824eb471f959678cbdec16531bc27010f8ea6c0298270de7dbe3e9bbde019a575148024a7a8baf1d94d99c1e600d801cadfb78e1116
 MISC metadata.xml 500 SHA256 98ecd9596f86ca204850d8c673a93f34c99e7a3eb6f55dbdf5ce56b9164d4407 SHA512 ecb262b3c942a347291496583730bc59599950983d66f1497110a459a16f5366e79273376c1967d5f59fa245c2cd64c93c11be7d16b7e85428a277bd81ac3984 WHIRLPOOL 21976221c15b97596c1ff94a80040adc5b29012afe9f80c12cd7e60fd3857947ada817d0ef83dcf533df287be0e6925596d4604e9522a0ccdcb844610373089a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRjBAYAAoJEOf+E+/4L5LmpKMP/1T0BbGx/LhYrXwms83vZd7t
-gFytGTIkVUyZoZHz/3nD26SIFDohCSsFnbmzQp4WK7/+0xJXK3pd/FXu36bfm4Me
-uI6RgUbljFX9ltxpP2QYg9lr40k9bZK6y50EsgxqAGMZ1RNAiPZbmhlVsCD6DYjL
-ESdV6BpWH2qHfklo2pP1jV1LhI5trZEWhXULSnARVw+i26nu8zxE70sTSXvC00bk
-SRucD7FHqhX1Vz0QizjYvYLkAo5RF8kYsLQerPWxa2srPY08+KxSSKemKYs49fgu
-4HEMElTuYgiOmbHBPNPRNuWZBTpTAPuIm/gGnpDMWnbUwP127YZhq2OG62R+wdoq
-JMfPBfHu6duRotA3v5iIjWmpuyks3xivMP8EeSzNJtcfQAZYS/70tK14ogr5qe4c
-5qxG7i9bB6mKvfcpWjyQbcYxCbOxhmyr0CV1BOi48X80MibMv36dj+Skgbt29ldh
-l+NKGJmAPPyOzNytpcXJrCuhxtzJnMY+nrME8Y1emJRLOBImuuLIkUuwYKwBNRKE
-l8wHbrwqnV978pWfckW1UKcHt48GrM0HQAHnc4l8kU3qb0rXr9eitpLNMwDRjSAg
-4trYNlGb9LGONg+sFs+6bxh14GSfHISqNWrsp9Bjy4ITt7IYanN0h3dyL5SZr0Zx
-x+y8NC6bLQhnjwFXt6D7
-=HWvQ
+iQIcBAEBCAAGBQJSDlTPAAoJEOf+E+/4L5Lm4IsP/354c+qB4sl1B8nYd1C2m+c2
+SQ4D3yIjq+xvysn9k5MUVJwVvD2t/1zx4WW5E5nladYwzGoOJoNuOFyezJNcbQ+T
+aWfLYOKbvHwjTKAD3KydzII4u1K5p8h3FUSeoHpZ05r47ZYmHqVE0V56tCrBqMGR
+c6sqe+96fT9dys0ljo0Na2cyOaU8zxjrU0Tmu5hT5kzsei+kXMXQddII7xNANFm/
+9a3Z/9i+j5yiYUKxzqkqiq1hK0Jhvn80KgiGdxIPHzXrocz2AwY1FoQYWWyzd1+B
+S3Yt29nuyKHTTj2O/0woZWAPlxzpal/kswFY8CdjPQkbT0Cqx0nbuFZflLqedb3U
+BcT7FAJ2OnHHHx+Du9Vy5AacVcFhAacY0AWEgsWdsbWHkwqXKN462wlXLUEZFZEI
+KrCTE5zn4Q1/IWXlB+ewpdZFdoU7A1lr4R13yGsBH1oPgfGwfZODLbE7/vwhB4oC
+xF+WAIHlEm+qNVE3wiLd5vxPrZKT+rxcjZNHrcmkS826dUZCCpuiUnlcpaNKGx5f
+2DNUPOnvHW8pwtoxomlgku46Xow/rxPRtBOskyvTVmzWOv16zlYX3OMKc4gIeY9L
+2F+1VMJqZ8lXOPhDp2DJLrtKNx8N7g6zz+KyNynHNPWX2L0eDfwLzxlRi0hZ00M9
+DNJlPVLQiDrjMzvOju3P
+=jnm4
 -----END PGP SIGNATURE-----
