@@ -9,13 +9,17 @@ DIST tevent-0.9.18.tar.gz 505276 SHA256 5c636a0c55a7b59745bae0d8ae3900b5ea8c09bf
 DIST tevent-0.9.19.tar.gz 543195 SHA256 f9a1d079844ec0068804541ee2421d8ff34d7a4cdb93a6cc20d0edd5302e3fc9 SHA512 9c8eb11dc8efbf6b7651261bb4359c6100022145df749630c116ecafea62f6527c3cc7ab73499e3ff1854454aab3947c58d49a9765fc857ac0ddd90250299d0d WHIRLPOOL ebdda4d558a023531c7c991027442dd05f83936f9e8389ce83de06b9d60033dea0e36299c3ed808a9670d84bb3c43297d3d5a5d62670e69ede474ef0bec32581
 EBUILD tevent-0.9.17.ebuild 890 SHA256 390e42029d460465acd28056173b6e5d33a6bfdeae3d7bb4abf00a9f24de3d13 SHA512 88ced8b08969c77239887f6388656d8a8fa97251a0173596a4046ef53e5ee7ecd037fda606c12c74e03e99cf83f95519b15aa1cec395b2c197435db09c099eac WHIRLPOOL 02ed5638ebab0e14590d0c6d15887bbae273d1e1f954eab0af64e22f85efbc6b143c30ab7d3a8b758771a62a424d8438c466f5298e8598f20ab2e63d30ed5309
 EBUILD tevent-0.9.18.ebuild 900 SHA256 e2bc633c624fc16a79bee371f69cd748cb1f0d8d85d8b9d1fff5e425b52f9e5c SHA512 d810b2c663628bbb55b220baf8d06504fa5a33c873a6ec1009428e5fb110ede8d9957e1cf5167a1f64c4786a73b6ce3582e8ad22f1c512ab7fcf22c3da672386 WHIRLPOOL e970f2a35a3f2c148a9cc6d82a088b7159d19e598074996225e8390dfeb05f04398f29004b3a1979e8d5971118cd9e1e93905daa5093e64c8452521dbc137146
-EBUILD tevent-0.9.19.ebuild 939 SHA256 c8d79229cd3608d288d785c2583c7802ec1b8c15748c66a9be0b2e3db73d5ab3 SHA512 ba598895d13be168c6852f7aae01c69b510899d458d39edc77ffa1bbb930a58791091380c8c70f7d57e0c6f07462cc86ce90726b0754befab23a030a4d1281c0 WHIRLPOOL 83bd58a75360bfb5cd913bde45875e035e0fa2760c9c0d548c9a3dbf02f6c816a58d72f47e680192e14691d83c1c7fd7409322b58ce006a99b7c52144677ce90
-MISC ChangeLog 5435 SHA256 edce3d308383a6b881e6cb1a3afa59ae994416ddb8c406aa1c75e2fe4c3d56e4 SHA512 09af184e3192a70a495be32702d6ae9c42b7abb9696c8e61e93710d74e4cd58f69f7a3bcab7075c7582569595c7df642d460daff361828075a16985a2b08b42c WHIRLPOOL 6e4d7ba04768d5728bfa46c9193952866706d841ef963fd09a761e2fa9eb25745ba42543f1713a9bc962bbfa5e1e5d0d09cc8a589df5d5f913286cbd35a6c4f0
+EBUILD tevent-0.9.19.ebuild 946 SHA256 7e2548de9d6de09c6ef4251ecde7cb3522d3045137181d534bd415872c0ee3f5 SHA512 89ea31630ee0daa104e2e4d48c757445e01e2e2267650d76549c1ede56ce966c492b4dbec57c5341ce526c3cffc83ae87003ee0bd929a7dfac5e066efd473587 WHIRLPOOL e59423cae2e6d2f1590a44a1299a095d0a5a6cea704484b9d8fc0dfa3e49d2536e088a388f8d306576ba86b74ee2209568effa8c0058939270235ab0208a7293
+MISC ChangeLog 5546 SHA256 c90207d34d35cb6f4aa78ace1287bbda72f9c0690e3321df12356d53f671b946 SHA512 adbd41640f4dc2d6dcae709d217961312d6a9d041143046865a65633c3aa286e7b3a31064eb072319a4c2176c9b7f4f82c2ba68c761979d000cf88a0be4ae73c WHIRLPOOL e5de5578f644546a84b276ba6146d68750a297af89ac9cc108c9b0a7341f04a7038b33f73124ef72f531e50eda33748ddd3825821433c4c8fccd39a2f5b474a3
 MISC metadata.xml 253 SHA256 89737be021da6f1a76894bd234f227b72ba57fd0213bdfdc0f5b38f1051ce775 SHA512 58c5ed90694ec0914f49f21b7066d7bd5610f53bbd0ee01e6d1b285e5f8f261bcb681e19b21c39287c312fc982b300f2a34a8cc638eaa0e939dd0da2b046288a WHIRLPOOL 15e90e302adf797a5761d14558f652e319613ec179ea5a4cdfcff2040bcf8d0cc734266744a69e644108ec47bcdde213ad5eaf0c7adf9d796a21e62a58ed9dfe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIKAlkACgkQ/ejvha5XGaPdEACeJqzOEXXPuGwFUgcs2DATuc5m
-HgEAn1LFmunh6OzE3DBYS0ZaYxAvZN6o
-=9i2/
+iQEcBAEBCAAGBQJSDlgOAAoJECo/aRed9267rykH/13bA3Prj0bvw60tsmLpIl28
+chSxeX522clDROgMs69LNJlEuLQqL5G+1+HDMF/mQWDQSEcTWiX9OBfH138AQKnH
+SpF/13XyD1HCK+jcf73QoN/tuX46XPOI0mFdJPZWpbDWjpFMmQh4IobJkrjj04vh
+Ti+Fq/JvsQZmYgUKSDbTOCVLsEIxKA6jrYsbgDjqJnoU0mBZNmS4rPAd6g+wPPkf
+KXnv1qy3mfVHwzS25hqPu0e+pM8UQJOdQC0JLUImSimGM0UG84AL4eDwcrJuM0yQ
+bkG2UtR/JrVreUM/rE5+LqzonyTfInDVv0ixwTioTXTS+pTyOxZH/ipQ5nY4iyI=
+=5m/N
 -----END PGP SIGNATURE-----
